# beshell-mg

./: CMakeLists.txt  README.md  changelog.md  idf_component.yml
dep/: mongoose.c  mongoose.h
examples/beshell-mg-app/: .gitignore  CMakeLists.txt  README.md  README_EN.md  sdkconfig.defaults
examples/beshell-mg-app/img/: partitions-16MB.csv  partitions-4MB.csv  partitions-8MB.csv
examples/beshell-mg-app/js/: main.js
examples/beshell-mg-app/js/example/: gpio-blink.js  http-client.js  http-download.js  http-server.js  mqtt-client.js  sntp-time.js  tcp-client.js  websocket-server.js  wifi-ap.js  wifi-scan.js  wifi-sta.js
examples/beshell-mg-app/main/: idf_component.yml  main.cpp
src/: Mg.cpp  Mg.hpp
src/beshell-mg/: Mg.cpp  Mg.hpp
src/beshell-mg/http/: HTTPClient.cpp  HTTPClient.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HTTPServer.hpp
src/beshell-mg/mqtt/: MQTTClient.cpp  MQTTClient.hpp
src/beshell-mg/tcp/: TCPClient.cpp  TCPClient.hpp
src/beshell/mg/: Mg.hpp
src/beshell/mg/http/: HTTPClient.cpp  HTTPClient.hpp  HTTPRequest.hpp  HTTPResponse.hpp  HTTPServer.cpp  HTTPServer.hpp
src/beshell/mg/mqtt/: MQTTClient.cpp  MQTTClient.hpp
src/beshell/mg/tcp/: TCPClient.cpp  TCPClient.hpp
src/http/: HTTPClient-WS.cpp  HTTPClient.hpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HTTPServer.cpp  HTTPServer.hpp
src/mqtt/: MQTTClient.cpp  MQTTClient.hpp
